Changelog
=========

1.0b4 (unreleased)
------------------

* New feature: As a moderator, I am notified when new comments require my
  attention.
  [timo]
  
* Make p.a.d. work with the recent version of plone.z3cform (0.5.10)
  [timo]

* Make p.a.d. styles less generic. This fixes #10253.
  [timo]

* Added greek translation.
  [ggozad]

1.0b3 (2010-01-28)
------------------

* Added an i18n directory for messages in the plone domain and updated scripts
  to rebuild and sync it.
  [hannosch]

* Added an optional conversationCanonicalAdapterFactory showing how to share
  comments across all translations with LinguaPlone, by storing and retrieving
  the conversation from the canonical object.
  [hannosch]

* Play by the Plone 3.3+ rules and use the INavigationRoot as a base for the
  moderation view.
  [hannosch]

* Added a commentTitle CSS class to the comment titles.
  [hannosch]

* Update message ids to match their real text.
  [hannosch]

* Set CSS classes for the comment form in the updateActions method.
  [timo]

* Respect the allow_comments field on an object and avoid calculations if no
  comments should be shown.
  [hannosch]

* Automatically load the ZCML files of the captcha widgets if they are
  installed.
  [hannosch]

* Fixed i18n domain in GenericSetup profiles to be ``plone``. Other values
  aren't supported for GS profiles.
  [hannosch]

* Provide our own copy of the default one state workflow. Not all Plone sites
  have this workflow installed.
  [hannosch]

* Register the event subscribers for the correct interfaces in Plone 3.
  [hannosch]

* Factored out subscriber declarations into its own ZCML file.
  [hannosch]

* Bugfix for #2281226: Moderation View: Comments disappear when hitting the
  'Apply' button without choosing a bulk action.
  [timo]

* Allow to show the full text of a comment in the moderation view.
  [timo]

* German translation added.
  [timo]

* Italian translation added.
  [keul]


1.0b2 (2010-01-22)
------------------
